# Brusselator_cuda

./: CMakeLists.txt  README.md  build_script.sh
src/: .brusselator_cuda.cu.swp  .kernels.cuh.swp  brusselator_cuda.cu  fitzhugh_nagumo_cuda.cu  funInit.hpp  funInit.tpp  kernels.cuh
